spade-tests/src/snapshots/spade_tests__typeinference__passing_too_many_arguments_to_turbofish_generates_proper_diagnostic.snap
---
source: spade-tests/src/typeinference.rs
assertion_line: 148
---
entity foo<T>() -> int<8> { 15 }
entity main() -> int<8> {
    inst foo::<bool, bool>()
}

error: Wrong number of type parameters
  ┌─ testinput:3:15
  │
1 │ entity foo<T>() -> int<8> { 15 }
  │            - Because this has 1 parameter
2 │ entity main() -> int<8> {
3 │     inst foo::<bool, bool>()
  │               ^^^^^^^^^^^^ Expected 1 type parameter


